--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "deep-equal": "^1.0.1",
     "dynogels": "^8.0.1",
     "graphql": "^0.10.3",
-    "graphql-date": "^1.0.3",
+    "graphql-iso-date": "^3.2.0",
     "graphql-type-json": "^0.1.4",
     "joi": "^10.6.0",
+    "object.omit": "^2.0.1",
     "object.pick": "^1.2.0",
     "pify": "^3.0.0",
     "xtend": "^4.0.1"
   },
   "devDependencies": {
+    "apollo-client": "^1.7.0",
     "express": "^4.15.3",
     "express-graphql": "^0.6.6"
   },
