--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@tradle/custom-models": "https://github.com/tradle/custom-models",
     "@tradle/models": "https://github.com/tradle/models",
+    "@tradle/validate-model": "tradle/validate-model",
+    "@tradle/validate-resource": "tradle/validate-resource",
     "clone": "^2.1.1",
     "co": "^4.6.0",
     "deep-equal": "^1.0.1",
