--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "apollo-client": "^1.7.0",
     "express": "^4.15.3",
     "express-graphql": "^0.6.6",
-    "graphql-tag": "^2.4.2"
+    "graphql-tag": "^2.4.2",
+    "isomorphic-fetch": "^2.2.1"
   },
   "scripts": {
     "lint": "eslint --quiet --ignore-path .gitignore ."
