--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dynogame",
+  "name": "@tradle/dynamo-graphql",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -29,10 +29,14 @@
     "express": "^4.15.3",
     "express-graphql": "^0.6.6",
     "graphql-tag": "^2.4.2",
-    "isomorphic-fetch": "^2.2.1"
+    "isomorphic-fetch": "^2.2.1",
+    "lowdb": "^0.16.2"
   },
   "scripts": {
     "lint": "eslint --quiet --ignore-path .gitignore .",
-    "dynamo": "docker run -p 4569:8000 -it --rm instructure/dynamo-local-admin"
+    "dynamo": "docker run -p 4569:8000 -it --rm instructure/dynamo-local-admin",
+    "loadfixtures": "DEBUG=tradle* node ./scripts/load-fixtures.js ./fixtures.json",
+    "serve": "DEBUG=tradle* node ./scripts/server.js",
+    "start": "yarn loadfixtures && yarn serve"
   }
 }
