simplify db query post processing

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "lint": "eslint --quiet --ignore-path .gitignore .",
     "dynamo": "docker run -p 4569:8000 -it --rm instructure/dynamo-local-admin",
     "loadfixtures": "node scripts/fixfixtures.js && DEBUG=tradle* node ./scripts/load-fixtures.js ./fixtures-fixed.json",
-    "serve": "DEBUG=tradle* node ./scripts/server.js",
-    "start": "yarn serve"
+    "start": "yarn server",
+    "server": "DEBUG=tradle* node scripts/server.js",
+    "debug:server": "DEBUG=tradle* node --debug --inspect scripts/server"
   }
 }
