--- a/package.json
+++ b/package.json
@@ -1,46 +1,44 @@
 {
-  "name": "@tradle/dynamo-graphql",
+  "name": "@tradle/dynamodb-graphql-example",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@tradle/custom-models": "https://github.com/tradle/custom-models",
+    "@tradle/dynamodb": "tradle/dynamodb",
     "@tradle/models": "https://github.com/tradle/models",
     "@tradle/validate-model": "tradle/validate-model",
-    "@tradle/validate-resource": "tradle/validate-resource",
-    "bindall": "^2.0.1",
-    "clone": "^2.1.1",
+    "apollo-client": "^1.9.0-0",
     "co": "^4.6.0",
-    "deep-equal": "^1.0.1",
+    "compression": "^1.7.0",
     "dynogels": "^8.0.1",
-    "error-ex": "^1.3.1",
-    "graphql": "^0.10.3",
-    "graphql-iso-date": "^3.2.0",
-    "graphql-type-json": "^0.1.4",
-    "joi": "^10.6.0",
-    "object.omit": "^2.0.1",
-    "object.pick": "^1.2.0",
-    "pify": "^3.0.0",
-    "typeforce": "^1.11.1",
-    "xtend": "^4.0.1"
-  },
-  "devDependencies": {
-    "apollo-client": "^1.7.0",
     "express": "^4.15.3",
     "express-graphql": "^0.6.6",
     "graphql-tag": "^2.4.2",
     "isomorphic-fetch": "^2.2.1",
     "lowdb": "^0.16.2"
   },
+  "devDependencies": {
+    "@tradle/custom-models": "https://github.com/tradle/custom-models",
+    "@tradle/schema-graphql": "tradle/schema-graphql",
+    "@tradle/schema-joi": "https://github.com/tradle/schema-joi",
+    "@tradle/validate-resource": "tradle/validate-resource"
+  },
+  "peerDependencies": {
+    "@tradle/schema-graphql": "*",
+    "@tradle/schema-joi": "*",
+    "@tradle/validate-resource": "*"
+  },
   "scripts": {
-    "lint": "eslint --quiet --ignore-path .gitignore .",
     "dynamo": "docker run -p 4569:8000 -it --rm instructure/dynamo-local-admin",
-    "loadfixtures": "node example/helpers/fixfixtures.js && DEBUG=tradle* node ./example/load-fixtures.js ./fixtures-fixed.json",
+    "loadfixtures": "node example/fixfixtures.js && DEBUG=*tradle* node ./example/load-fixtures.js ./example/fixtures-fixed.json",
     "start": "yarn server",
-    "server": "DEBUG=tradle* node example/server",
-    "client": "DEBUG=tradle* node example/client",
-    "debug:server": "DEBUG=tradle* node --debug --inspect example/server",
-    "debug-brk:server": "DEBUG=tradle* node --debug-brk --inspect example/server",
-    "genschema": "node scripts/gen-schema.js > schema.graphql"
+    "server": "DEBUG=*tradle* node example/server",
+    "client": "DEBUG=*tradle* node example/client",
+    "debug:server": "DEBUG=*tradle* node --debug --inspect example/server",
+    "debug-brk:server": "DEBUG=*tradle* node --debug-brk --inspect example/server"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tradle/dynamodb-graphql-example"
   }
 }
