--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@tradle/build-resource": "tradle/build-resource",
-    "@tradle/custom-models": "https://github.com/tradle/custom-models",
+    "@tradle/build-resource": "^2.0.0",
+    "@tradle/custom-models": "github:tradle/custom-models",
     "@tradle/dynamodb": "github:tradle/dynamodb",
     "@tradle/engine": "^4.10.0",
     "@tradle/models": "https://github.com/tradle/models",
     "@tradle/schema-graphql": "github:tradle/schema-graphql",
     "@tradle/schema-joi": "tradle/schema-joi",
-    "@tradle/validate-model": "tradle/validate-model",
-    "@tradle/validate-resource": "tradle/validate-resource",
+    "@tradle/validate-model": "^2.0.1",
+    "@tradle/validate-resource": "^2.0.0",
     "apollo-client": "^1.9.0-0",
     "aws-sdk": "^2.100.0",
     "co": "^4.6.0",
