--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lowdb": "^0.16.2"
   },
   "scripts": {
-    "dynamo": "docker run -p 4569:8000 -it --rm instructure/dynamo-local-admin",
+    "dynamo": "cd dynamo-local && docker-compose up",
     "loadfixtures": "DEBUG=*tradle* node ./example/load-fixtures.js ./example/fixtures.json",
     "start": "yarn server",
     "server": "DEBUG=*tradle* node example/server",
