--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@tradle/build-resource": "^2.0.0",
+    "@tradle/build-resource": "^2.9.1",
     "@tradle/custom-models": "github:tradle/custom-models",
     "@tradle/dynamodb": "github:tradle/dynamodb",
     "@tradle/engine": "^4.10.0",
     "@tradle/gen-samples": "github:tradle/gen-samples",
+    "@tradle/merge-models": "^2.1.0",
     "@tradle/models": "github:tradle/models",
     "@tradle/schema-graphql": "github:tradle/schema-graphql",
     "@tradle/schema-joi": "tradle/schema-joi",
-    "@tradle/validate-model": "^2.0.1",
-    "@tradle/validate-resource": "^2.5.0",
+    "@tradle/validate-model": "^2.2.0",
+    "@tradle/validate-resource": "^2.8.0",
     "apollo-client": "^1.9.0-0",
     "aws-sdk": "^2.100.0",
     "co": "^4.6.0",
